--- a/scripts/install
+++ b/scripts/install
@@ -31,7 +31,7 @@ cp color-schemes/railscasts/base16-railscasts.vim ~/.vim/colors/
 cp color-schemes/lucius/lucius.vim ~/.vim/colors/
 
 # Iterm colors
-open color-schemes/railscasts/base16-railscasts.dark.itermcolors
+open color-schemes/railscasts/base16-railscasts.dark.256.itermcolors
 open color-schemes/lucius/LuciusLight.itermcolors
 
 # Iterm preferences
