--- a/scripts/install
+++ b/scripts/install
@@ -1,10 +1,8 @@
 #!/bin/sh
 git clone https://github.com/bhilburn/powerlevel9k.git zsh/plugins/oh-my-zsh/custom/themes/powerlevel9k
 git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
-vim  -c "PluginInstall" -c "qa"
 
-declare -a formulas=("zsh" "fzf" "tmux" "rbenv" "vim" "Ack")
+declare -a formulas=("zsh" "fzf" "tmux" "rbenv" "nvim" "Ack")
 
 ## now loop through the above array
 for f in "${formulas[@]}"; do
@@ -22,9 +20,14 @@ for f in "${formulas[@]}"; do
 	fi
 done
 
+# Install vim-plug for neovim
+curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs \
+    https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+nvim  -c "PlugInstall" -c "qa"
+
 mkdir -p ~/.vim/colors
 
-git config --global core.editor $(which vim)
+git config --global core.editor $(which nvim)
 git config --global core.excludesfile "$PWD"/.gitignore
 
 # Vim colors
