Remove leading dots from dotfiles
This makes them a bit easier to work with, because commands like `ls`
don't list .dotfiles.

--- a/scripts/install
+++ b/scripts/install
@@ -50,13 +50,11 @@ defaults write com.googlecode.iterm2.plist LoadPrefsFromCustomFolder -bool true
 
 
 echo "---"
-echo "Please link your .zshrc:"
-printf "ln -s $DOTFILES_PATH/zsh/.zshrc ~/.zshrc"
-echo "Please replace the contents of your ~/.tmux.conf with this:"
-printf "source-file $PWD/.tmux.conf"
-echo "Please replace the contents of your ~/.tigrc with this:"
-printf "source $PWD/.tigrc"
+echo "Please link your dotfiles:"
+printf "ln -s $DOTFILES_PATH/zsh/zshrc $DOTFILES_PATH/zsh/.zshrc"
+printf "ln -s $DOTFILES_PATH/zsh/zshrc ~/.zshrc"
+printf "ln -s $DOTFILES_PATH/tmux_conf ~/.tmux.conf"
+printf "ln -s $DOTFILES_PATH/tigrc ~/.tigrc"
+printf "ln -s $DOTFILES_PATH/vim/vimrc ~/.config/nvim/init.vim"
 echo "---"
 echo "If your shell looks weird, install_powerline_fonts.sh is your friend."
-echo "Please link your init.vim / .vimrc:"
-printf "ln -s $DOTFILES_PATH/vim/.vimrc ~/.config/nvim/init.vim"
