--- a/scripts/install
+++ b/scripts/install
@@ -5,7 +5,7 @@ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 export ZDOTDIR=$DOTFILES_PATH/zsh
 git clone --recursive https://github.com/sorin-ionescu/prezto.git "${ZDOTDIR:-$HOME}/.zprezto"
 
-declare -a formulas=("zsh" "fzf" "tmux" "rbenv" "nvim" "Ack")
+declare -a formulas=("zsh" "fzf" "tmux" "rbenv" "nvim" "Ack" "python3")
 
 ## now loop through the above array
 for f in "${formulas[@]}"; do
@@ -48,6 +48,7 @@ defaults write com.googlecode.iterm2.plist PrefsCustomFolder -string "$PWD"
 # Tell iTerm2 to use the custom preferences in the directory
 defaults write com.googlecode.iterm2.plist LoadPrefsFromCustomFolder -bool true
 
+pip3 install neovim
 
 echo "---"
 echo "Please link your dotfiles:"
