Add xcode-select to install script
This is required by nokogiri, which in turn is required by rails.

--- a/scripts/install
+++ b/scripts/install
@@ -50,6 +50,7 @@ defaults write com.googlecode.iterm2.plist LoadPrefsFromCustomFolder -bool true
 
 pip3 install neovim
 gem install tmuxinator
+xcode-select --install
 
 echo "---"
 echo "Please link your dotfiles:"
