--- a/scripts/install
+++ b/scripts/install
@@ -51,6 +51,7 @@ defaults write com.googlecode.iterm2.plist LoadPrefsFromCustomFolder -bool true
 pip3 install neovim
 gem install tmuxinator
 xcode-select --install
+npm install -g livedown
 
 echo "---"
 echo "Please link your dotfiles:"
