--- a/scripts/install
+++ b/scripts/install
@@ -32,7 +32,7 @@ defaults write com.googlecode.iterm2.plist PrefsCustomFolder -string "$PWD"
 defaults write com.googlecode.iterm2.plist LoadPrefsFromCustomFolder -bool true
 
 pip3 install neovim
-gem install tmuxinator
+bundle install
 xcode-select --install
 npm install -g livedown
 
