--- a/scripts/install
+++ b/scripts/install
@@ -15,6 +15,7 @@ mkdir -p ~/.vim/colors
 
 git config --global core.editor $(which nvim)
 git config --global core.excludesfile "$PWD"/.gitignore
+git config --global rerere.enabled true
 
 # Vim colors
 cp color-schemes/railscasts/base16-railscasts.vim ~/.vim/colors/
