--- a/scripts/install
+++ b/scripts/install
@@ -47,11 +47,7 @@ pip3 install neovim
 curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs \
   https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
-mkdir -p /$HOME/.omnisharp && \
-  curl -Lo /tmp/omnisharp-roslyn.tar.gz \
-  https://github.com/OmniSharp/omnisharp-roslyn/releases/download/v1.35.2/omnisharp-linux-x64.tar.gz && \
-  tar -xzf /tmp/omnisharp-roslyn.tar.gz -C $HOME/.omnisharp && \
-  rm /tmp/omnisharp-roslyn.tar.gz
+./install_omnisharp
 
 # Install neovim plugins
 nvim +PlugInstall +qall &> /dev/null
